manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "devopsclusteraks-0d28"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "devopsclusteraks-0d28"
  template:
    metadata:
      labels:
        app: "devopsclusteraks-0d28"
    spec:
      containers:
        - name: "devopsclusteraks-0d28"
          image: "myacr4568975.azurecr.io/devopsclusteraks"
          ports:
          - containerPort: 80
